Nouvel affichage concernant la création d'une zone.
- Un message indique si la zone a été créée ou non.
- Le if/else de la page mapage.tt n'a pas beaucoup d'intérêt dans l'état
actuel des choses. Il servira lorsqu'on qu'on voudra faire la mise en
page (avec une mise en page différente en case de succès ou d'échec).

Suppression de mapage.tt

--- a/www/views/home.tt
+++ b/www/views/home.tt
@@ -16,6 +16,17 @@
 
 <div id="page">
 
+    <!-- Permettra une mise en forme plus propre. -->
+    <% IF creationSuccess == 1 %>
+        <p>
+            Le domaine "<% domainName %>" a bien été créée.
+        </p>
+    <% ELSIF creationFailure == 1 %>
+        <p>
+            Le domaine "<% domainName %>" n'a pas été créée.
+        </p>
+    <% END %>
+
 <% IF domains && domains.size %>
     <h3>Vos domaines :</h3>
     <br />
