--- a/www/views/index.tt
+++ b/www/views/index.tt
@@ -1,20 +1,24 @@
-    <div id="sidebar">
-        <% IF logged == 1 %>
+<div id="sidebar">
+
+    <% IF logged == 1 %>
         Welcome <% login %> !
         <form action='logout' method="get" accept-charset="utf-8">
             <input type="submit" name="logout" value="Déconnexion">
         </form>
-		<a href='mapage'>Votre page de configuration</a><br />
-		<% IF admin == 1 %>
-			<a href='administration'>Page d'administration</a><br />
-		<% END %>
-		<% IF domains %>
-		Liens rapides :<br />
-		<% FOREACH domain IN domains %>
-		<a href="details?domain=<% domain %>"><% domain %> </a><br />
-		<% END %>
-		<% END %>
-        <% ELSE %>
+
+        <a href='mapage'>Votre page de configuration</a><br />
+        <% IF admin == 1 %>
+            <a href='administration'>Page d'administration</a><br />
+        <% END %>
+
+        <% IF domains %>
+            Liens rapides :<br />
+            <% FOREACH domain IN domains %>
+                <a href="details/<% domain %>"><% domain %></a><br />
+            <% END %>
+        <% END %>
+
+    <% ELSE %>
         <form action="login" method="post" accept-charset="utf-8">
             <label for="login">Votre login : </label>
             <input type="text" name="login" value="" />
@@ -22,23 +26,31 @@
             <input type="password" name="password" value="" />
             <p><input type="submit" value="Connexion &rarr;" /></p>
         </form>
-        <% END %>
-    </div>
-    <div id="page">
-        <h1 style="text-align:center">Bienvenue sur netlib.re ! </h1>
-        <p style="text-align:center;">Netlib.re est un projet qui permettra à tout un chacun d'obtenir un sous-domaine de netlib.re, gratuitement et simplement. </p>
-        <br />
-        <h2>Pourquoi ?</h2>
-        Nous pensons qu'Internet est et doit rester un lieu où l'utilisateur crée le contenu. Ce projet permettra donc d'apporter un peu notre pierre à l'édifice en aidant les gens n'ayant pas forcément de compétences en informatique de créer un nom de domaine.<br />
-        Remarque : ce site ne fera pas d'hébergement, il founira uniquement un serveur de nom de domaine automatisé.
-        <h2>Qui sommes-nous ?</h2>
-        <p>Une bande d'informaticiens passionnés, voulant aider la communauté.</p>
-        <h2>Ce qui sera proposé</h2>
-        À venir sur le site : 
-        <ul>
-            <li>visualisation de la liste des domaines déjà réservés et utilisés ; </li>
-            <li>création d'un compte vous permettant de demander un nom de domaine en *.netlib.re (un administrateur devra le valider) ;</li>
-            <li>nous aimerions également proposer une mise à jour dynamique de votre adresse (dyndns).</li>
-        </ul>
-        <p>En résumé : cherchez votre nom de domaine, réservez-le, on s'occupe du reste ! </p>
-    </div>
+    <% END %>
+
+</div>
+
+<div id="page">
+
+    <h1 style="text-align:center">Bienvenue sur netlib.re !</h1>
+    <p style="text-align:center;">Netlib.re est un projet qui permettra à tout un chacun d'obtenir un sous-domaine de netlib.re, gratuitement et simplement. </p>
+    <br />
+
+    <h2>Pourquoi ?</h2>
+    Nous pensons qu'Internet est et doit rester un lieu où l'utilisateur crée le contenu. 
+    Ce projet permettra donc d'apporter un peu notre pierre à l'édifice en aidant les gens n'ayant pas forcément de compétences en informatique de créer un nom de domaine.<br />
+    Remarque : ce site ne fera pas d'hébergement, il founira uniquement un serveur de nom de domaine automatisé.
+
+    <h2>Qui sommes-nous ?</h2>
+    <p>Une bande d'informaticiens passionnés, voulant aider la communauté.</p>
+    <h2>Ce qui sera proposé</h2>
+
+    À venir sur le site : 
+    <ul>
+        <li>visualisation de la liste des domaines déjà réservés et utilisés ; </li>
+        <li>création d'un compte vous permettant de demander un nom de domaine en *.netlib.re (un administrateur devra le valider) ;</li>
+        <li>nous aimerions également proposer une mise à jour dynamique de votre adresse (dyndns).</li>
+    </ul>
+    <p>En résumé : cherchez votre nom de domaine, réservez-le, on s'occupe du reste ! </p>
+
+</div>
