ajout de la possibilité de s'inscrire

--- a/www/views/index.tt
+++ b/www/views/index.tt
@@ -57,4 +57,6 @@
     </ul>
     <p>En résumé : cherchez votre nom de domaine, réservez-le, on s'occupe du reste ! </p>
 
+    <h3><a href="/user/subscribe" >S'enregistrer</a></h3>
+
 </div>
