--- a/www/views/administration.tt
+++ b/www/views/administration.tt
@@ -1,25 +1,4 @@
-<div id="sidebar">
-    Welcome <% login %> !
-
-    <a href="/user/logout">Déconnexion</a>
-    <br />
-    <a href="/home">Ma page</a>
-
-    <br />
-    <a href='/admin'>Page d'administration</a>
-    <br />
-
-    <a href='/'>Accueil</a>
-    <br />
-
-    <% IF domains %>
-        Liens rapides :<br />
-        <% FOREACH domain IN domains %>
-            <a href="/domain/details/<% domain %>"><% domain %></a><br />
-        <% END %>
-    <% END %>
-
-</div>
+<% include sidebar.tt %>
 
 <div id="page">
     <h1>Bienvenue sur la page d'administration</h1>
