--- a/www/views/details.tt
+++ b/www/views/details.tt
@@ -1,21 +1,4 @@
-<div id="sidebar">
-    Welcome <% login %> !
-
-    <br />
-    <a href="/user/logout">Déconnexion</a>
-
-    <br />
-    <a href="/home">Ma page</a>
-
-    <br />
-    <% IF admin == 1 %>
-        <a href='/admin'>Page d'administration</a>
-        <br />
-    <% END %>
-
-    <a href='/'>Accueil</a>
-
-</div>
+<% include sidebar.tt %>
 
 <div id="page">
 
