--- a/www/views/index.tt
+++ b/www/views/index.tt
@@ -1,38 +1,4 @@
-<div id="sidebar">
-
-    <% IF logged == 1 %>
-
-        Welcome <% login %> !
-        <br />
-        <a href="/user/logout">Déconnexion</a>
-
-	<br />
-        <a href='/home'>Ma page</a><br />
-
-        <% IF admin == 1 %>
-            <a href='/admin'>Page d'administration</a>
-            <br />
-        <% END %>
-
-        <% IF domains %>
-            Liens rapides :<br />
-            <% FOREACH domain IN domains %>
-                <a href="/domain/details/<% domain %>"><% domain %></a><br />
-            <% END %>
-        <% END %>
-
-    <% ELSE %>
-        <form action="/user/login" method="post" accept-charset="utf-8">
-            <label for="login">Votre login : </label>
-            <input type="text" name="login" value="" />
-
-            <label for="password">Votre mot de passe : </label>
-            <input type="password" name="password" value="" />
-            <p><input type="submit" value="Connexion &rarr;" /></p>
-        </form>
-    <% END %>
-
-</div>
+<% include sidebar.tt %>
 
 <div id="page">
 
