--- a/www/views/layouts/main.tt
+++ b/www/views/layouts/main.tt
@@ -1,20 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html lang="fr" >
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=<% settings.charset %>" />
 <title>DNSManager</title>
-<link rel="stylesheet" href="<% request.uri_base %>/css/style.css" />
 
 <script type="text/javascript">/* <![CDATA[ */
     !window.jQuery && document.write('<script type="text/javascript" src="<% request.uri_base %>/javascripts/jquery.js"><\/script>')
 /* ]]> */</script>
 
+<link rel="stylesheet" href="<% request.uri_base %>/css/bootstrap.min.css">
+<link rel="stylesheet" href="<% request.uri_base %>/css/bootstrap-theme.min.css">
+<script src="<% request.uri_base %>/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
+
 <% content %>
-<div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer</a> <% dancer_version %>
+
+<div class="row">
+    <div class="col-sm-8 col-sm-offset-3">
+        <div class="well" id="footer">
+            Powered by <a href="http://perldancer.org/">Dancer</a> <% dancer_version %> ♥
+        </div>
+    </div>
 </div>
 </body>
+
 </html>
