--- a/www/views/sidebar.tt
+++ b/www/views/sidebar.tt
@@ -1,42 +1,55 @@
-<div id="sidebar">
+<div class="row">
+    <div class="col-sm-2 col-sm-offset-1">
 
-    <% IF login.defined %>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Navigation</h3>
+            </div>
 
-        Salut <% login %> !
-        <br />
-        <a href="/user/logout">Déconnexion</a>
-	<br />
+            <div class="panel-body">
+                <% IF login.defined %>
 
-        <a href='/home'>Ma page</a><br />
-	<br />
+                Salut <% login %> !
+                <hr />
 
-        <% IF admin == 1 %>
-            <a href='/admin'>Page d'administration</a>
-            <br />
-        <% END %>
+                <div class="list-group">
+                <a href="/user/logout" class="list-group-item active">Déconnexion</a>
+                <a href='/home' class="list-group-item active">Ma page</a>
 
-        <% IF domains %>
-            Liens rapides :<br />
-            <% FOREACH domain IN domains %>
+                <% IF admin == 1 %>
+                <a href='/admin' class="list-group-item ">Administration</a>
+                <% END %>
+
+                <% IF domain.defined %>
+                <a href="/domain/del/<% domain %>" class="list-group-item ">Supprimer la zone</a>
+                <% END %>
+                </div>
+
+                <% IF domains %>
+                <hr />
+                <p>Mes domaines</p>
+                <% FOREACH domain IN domains %>
                 <a href="/domain/details/<% domain %>"><% domain %></a><br />
-            <% END %>
-        <% END %>
+                <% END %>
+                <% END %>
 
-    <% ELSE %>
-        Se connecter : <br />
-        <form action="/user/login" method="post" accept-charset="utf-8">
-            <label for="login">Votre login : </label>
-            <input type="text" name="login" value="" />
+                <% ELSE %>
+                <form role="form" action="/user/login" method="post" accept-charset="utf-8">
+                    <div class="form-group">
+                        <fieldset>
+                            <legend>Se connecter:</legend>
+                            <label for="login">Votre identifiant : </label>
+                            <input type="text" name="login" value="" />
 
-            <label for="password">Votre mot de passe : </label>
-            <input type="password" name="password" value="" />
-            <p><input type="submit" value="Connexion &rarr;" /></p>
-        </form>
+                            <label for="password">Votre mot de passe : </label>
+                            <input type="password" name="password" value="" />
+                            <p><input type="submit" value="Connexion &rarr;" /></p>
+                        </fieldset>
+                    </div>
+                </form>
 
-    <% END %>
-
-        <br />
-        <a href='/'>Accueil</a>
-        <br />
-
-</div>
+                <% END %>
+            </div>
+        </div>
+    </div><!-- /.col-sm-2 -->
+    <div class="col-sm-8">
