--- a/www/views/sidebar.tt
+++ b/www/views/sidebar.tt
@@ -34,16 +34,18 @@
                 <% END %>
 
                 <% ELSE %>
-                <form role="form" action="/user/login" method="post" accept-charset="utf-8">
+                <form class="form" role="form" action="/user/login" method="post" accept-charset="utf-8">
                     <div class="form-group">
                         <fieldset>
                             <legend>Se connecter:</legend>
                             <label for="login">Votre identifiant : </label>
-                            <input type="text" name="login" value="" />
+                            <input type="text" name="login" class="form-control" id="login" placeholder="Votre futur identifiant de connexion" />
 
                             <label for="password">Votre mot de passe : </label>
-                            <input type="password" name="password" value="" />
-                            <p><input type="submit" value="Connexion &rarr;" /></p>
+                            <input type="password" name="password" class="form-control" id="password" placeholder="Mot de passe" />
+
+                            <br />
+                            <button type="submit" class="btn btn-default">Connexion &rarr;</button>
                         </fieldset>
                     </div>
                 </form>
