--- a/www/views/layouts/main.tt
+++ b/www/views/layouts/main.tt
@@ -5,7 +5,7 @@
 <title>DNSManager</title>
 
 <script type="text/javascript">/* <![CDATA[ */
-    !window.jQuery && document.write('<script type="text/javascript" src="<% request.uri_base %>/javascripts/jquery.js"><\/script>')
+    !window.jQuery && document.write('<script type="text/javascript" src="<% request.uri_base %>/js/jquery.min.js"><\/script>')
 /* ]]> */</script>
 
 <link rel="stylesheet" href="<% request.uri_base %>/css/bootstrap.min.css">
