--- a/www/views/details.tt
+++ b/www/views/details.tt
@@ -31,6 +31,7 @@
 					<td>NS</td>
 					<td><% address.host %></td>
 					<td><% address.ttl %></td>
+					<td><button type="button" class="btn btn-primary btn-danger btn-xs" onclick="location.href='http://'+location.host+'/domain/del/<% domain %>/<% address.name %>/NS/<% address.host %>/<% address.ttl %>';">✘</button></td>
 				</tr>
 			<% END %>
 
@@ -41,6 +42,7 @@
 					<td>A</td>
 					<td><% address.host %></td>
 					<td><% address.ttl %></td>
+					<td><button type="button" class="btn btn-primary btn-danger btn-xs" onclick="location.href='http://'+location.host+'/domain/del/<% domain %>/<% address.name %>/A/<% address.host %>/<% address.ttl %>';">✘</button></td>
 				</tr>
 			<% END %>
 
@@ -51,6 +53,7 @@
 					<td>AAAA</td>
 					<td><% address.host %></td>
 					<td><% address.ttl %></td>
+					<td><button type="button" class="btn btn-primary btn-danger btn-xs" onclick="location.href='http://'+location.host+'/domain/del/<% domain %>/<% address.name %>/AAAA/<% address.host %>/<% address.ttl %>';">✘</button></td>
 				</tr>
 			<% END %>
 
@@ -61,6 +64,7 @@
 					<td>CNAME</td>
 					<td><% address.host %></td>
 					<td><% address.ttl %></td>
+					<td><button type="button" class="btn btn-primary btn-danger btn-xs" onclick="location.href='http://'+location.host+'/domain/del/<% domain %>/<% address.name %>/CNAME/<% address.host %>/<% address.ttl %>';">✘</button></td>
 				</tr>
 			<% END %>
 
@@ -71,6 +75,7 @@
 					<td>PTR</td>
 					<td><% address.host %></td>
 					<td><% address.ttl %></td>
+					<td><button type="button" class="btn btn-primary btn-danger btn-xs" onclick="location.href='http://'+location.host+'/domain/del/<% domain %>/<% address.name %>/PTR/<% address.host %>/<% address.ttl %>';">✘</button></td>
 				</tr>
 			<% END %>
 
@@ -81,9 +86,9 @@
 					<td>MX</td>
 					<td><% address.host %> (<% address.priority %>)</td>
 					<td><% address.ttl %></td>
+					<td><button type="button" class="btn btn-primary btn-danger btn-xs" onclick="location.href='http://'+location.host+'/domain/del/<% domain %>/<% address.name %>/MX/<% address.host %>/<% address.ttl %>';">✘</button></td>
 				</tr>
 			<% END %>
-
 		</table>
 		<a href='/domain/details/<% domain %>?expert=1'><button type="button" class="btn btn-primary">Visualisation en mode expert</button></a>
 
